solo/chef-stacktrace.out
Generated at Mon May 20 04:49:53 +0000 2013
SyntaxError: compile error
/home/reese/chef/cookbooks/apache2/recipes/food_site.rb:74: syntax error, unexpected tIDENTIFIER, expecting ']'
        chown -R apache:developers #{app_dir}/public/cache
             ^
/home/reese/chef/cookbooks/apache2/recipes/food_site.rb:74: syntax error, unexpected tIDENTIFIER, expecting kDO or '{' or '('
        chown -R apache:developers #{app_dir}/public/cache
                       ^
/home/reese/chef/cookbooks/apache2/recipes/food_site.rb:79: syntax error, unexpected tIDENTIFIER, expecting kEND
execute "writeable" do #writeable to developers group
                  ^
/home/reese/chef/cookbooks/apache2/recipes/food_site.rb:80: syntax error, unexpected tIDENTIFIER, expecting kEND
    command "find #{app_dir} -group developers | xargs chmod g+w"
                 ^
/home/reese/chef/cookbooks/apache2/recipes/food_site.rb:81:in `from_file'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/cookbook_version.rb:558:in `load_recipe'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/mixin/language_include_recipe.rb:46:in `load_recipe'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/mixin/language_include_recipe.rb:33:in `include_recipe'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/mixin/language_include_recipe.rb:27:in `each'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/mixin/language_include_recipe.rb:27:in `include_recipe'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/run_context.rb:79:in `load'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/run_context.rb:75:in `each'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/run_context.rb:75:in `load'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/client.rb:198:in `setup_run_context'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/client.rb:418:in `do_run'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/client.rb:176:in `run'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/application.rb:140:in `run_chef_client'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/application/solo.rb:224:in `run_application'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/application/solo.rb:216:in `loop'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/application/solo.rb:216:in `run_application'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/../lib/chef/application.rb:72:in `run'
/usr/lib64/ruby/gems/1.8/gems/chef-10.16.6/bin/chef-solo:25
/usr/bin/chef-solo:19:in `load'
/usr/bin/chef-solo:19